kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pravnamreza
  labels:
    app: pravnamreza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pravnamreza
  template:
    metadata:
      labels:
        app: pravnamreza
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: pravnamreza
          image: pravnamreza # kustomize thing
          command:
            - gunicorn
            - pravnamreza.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              memory: 400Mi
              cpu: 100m
            limits:
              memory: 400Mi
              cpu: 100m
