kustomize/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pravnamreza
  labels:
    app: pravnamreza
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pravnamreza
  template:
    metadata:
      labels:
        app: pravnamreza
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: pravnamreza-persistent-storage
          persistentVolumeClaim:
            claimName: pravnamreza-pvc
        - name: nginx-config
          configMap:
            name: pravnamreza-nginx-config
      containers:
        - name: pravnamreza
          image: pravnamreza # kustomize thing
          volumeMounts:
            - name: pravnamreza-persistent-storage
              mountPath: /pvc
          command:
            - gunicorn
            - pravnamreza.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
        - name: pravnamreza-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: pravnamreza-persistent-storage
              mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: pravnamreza
spec:
  selector:
    app: pravnamreza
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pravnamreza-nginx
spec:
  selector:
    app: pravnamreza
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pravnamreza
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - pravnamreza.k8s.djnd.si
        - pravna-mreza.si
        - www.pravna-mreza.si
      secretName: pravnamreza-tls
  rules:
    - host: pravnamreza.k8s.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza
                port:
                  number: 8000
    - host: pravna-mreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza
                port:
                  number: 8000
    - host: www.pravna-mreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pravnamreza-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - files.pravnamreza.k8s.djnd.si
      secretName: pravnamreza-nginx-tls
  rules:
    - host: files.pravnamreza.k8s.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza-nginx
                port:
                  number: 80
