kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pravnamreza
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pravna-mreza.si
        - www.pravna-mreza.si
      secretName: pravnamreza-tls
  rules:
    - host: pravna-mreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza
                port:
                  number: 8000
    - host: www.pravna-mreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pravnamreza-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*" # TODO
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - files.pravnamreza.si
      secretName: pravnamreza-nginx-tls
  rules:
    - host: files.pravnamreza.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pravnamreza-nginx
                port:
                  number: 80
